--- a/css/styles.css
+++ b/css/styles.css
@@ -6,22 +6,280 @@
 
 main{display:none;}
 
-#preload-page{position:fixed; top:0%; left:0%; width:100%; height:100%; background:white; display:none; z-index:999; overflow:hidden; }
-#preload-img{position:absolute; width:100%; height:100%; display:none;}
-#preloader-cover{position:absolute; display:block;  width:60px; height:60px; background:transparent; opacity:1; border-radius:50%; animation:scally ease-out 1s infinite .2s alternate; }
-#preloader{position:absolute; display:block;  width:100%; height:100%; background:rgba(0,0,0,.1); border-radius:50%; animation:backchange ease-out 1s infinite .2s alternate-reverse; }
 
-@keyframes backchange{
-	25%{background:rgba(0,0,0,.08);}
-	50%{background:rgba(0,0,0,.06);}
-	75%{background:rgba(0,0,0,.04);}
-	100%{background:rgba(0,0,0,.02);}
+#preload-page{position:fixed; top:0%; left:0%; width:100%; height:100vh; background:#110117; display:block; z-index:9999; overflow:hidden;  }
+#preloader-text-desktop{position: absolute; top: 47.5%; right:-100%; font-size: 15px; font-weight:lighter; font-family:sans-serif; color: white; letter-spacing: 5px;}
+#preloader-text-mobile{display:none;}
+
+#logo {position: absolute; left:50%; top: 50%;  transform: translate(-40%, -50%); animation: fill 1.5s ease forwards 3s;}
+#logo path:nth-child(1){
+	stroke-dasharray: 129; stroke-dashoffset: 129; animation: line-anim 1.5s ease forwards;
+} 
+#logo path:nth-child(2){
+	stroke-dasharray: 290; stroke-dashoffset: 290; animation: line-anim 1.5s ease forwards 0.3s;
 }
-@keyframes scally{
-		from{transform:scale(3.5,3.5);}
-		to{transform:scale(1,1);}
-	}
+#logo path:nth-child(3){
+	stroke-dasharray: 143; stroke-dashoffset: 143; animation: line-anim 1.5s ease forwards 0.6s;
+}
+#logo path:nth-child(4){
+	stroke-dasharray: 215; stroke-dashoffset: 215; animation: line-anim 1.5s ease forwards 0.9s;
+}
+#logo path:nth-child(5){
+	stroke-dasharray: 143; stroke-dashoffset: 143; animation: line-anim 1.5s ease forwards 1.2s;
+}
+#logo path:nth-child(6){
+	stroke-dasharray: 205; stroke-dashoffset: 205; animation: line-anim 1.5s ease forwards 1.5s;
+}
+#logo path:nth-child(7){
+	stroke-dasharray: 246; stroke-dashoffset: 246; animation: line-anim 1.5s ease forwards 1.8s;
+}
+#logo path:nth-child(8){
+	stroke-dasharray: 176; stroke-dashoffset: 176; animation: line-anim 1.5s ease forwards 2.1s;
+}
+#logo path:nth-child(9){
+	stroke-dasharray: 215; stroke-dashoffset: 215; animation: line-anim 1.5s ease forwards 2.4s;
+}
 
+@keyframes line-anim{
+	to{ stroke-dashoffset: 0;}
+}
+
+@keyframes fill{
+	from{ fill : transparent;}
+	to{ fill: #0CF6E8;}
+}
+
+
+.preloader16 {
+	display: block;
+	height: 50px;
+	width: 50px;
+	position: absolute;
+	left:33%; 
+	top:48%;
+	
+  }
+  
+  .preloader16 span {
+	width: 16px;
+	height: 16px;
+	background-color: #000;
+	display: inline-block;
+	background-color: #18bc9c;
+	-webkit-animation: square2 2s infinite ease-in-out both;
+			animation: square2 2s infinite ease-in-out both;
+  }
+  
+  .preloader16 span:nth-child(1) {
+	-webkit-animation: preloader_2_1 1.5s infinite ease-in-out;
+			animation: preloader_2_1 1.5s infinite ease-in-out;
+  }
+  
+  .preloader16 span:nth-child(2) {
+	left: 20px;
+	-webkit-animation: preloader_2_2 1.5s infinite ease-in-out;
+			animation: preloader_2_2 1.5s infinite ease-in-out;
+  }
+  
+  .preloader16 span:nth-child(3) {
+	top: 0px;
+	-webkit-animation: preloader_2_3 1.5s infinite ease-in-out;
+			animation: preloader_2_3 1.5s infinite ease-in-out;
+  }
+  
+  .preloader16 span:nth-child(4) {
+	top: 0px;
+	left: 20px;
+	-webkit-animation: preloader_2_4 1.5s infinite ease-in-out;
+			animation: preloader_2_4 1.5s infinite ease-in-out;
+  }
+  
+  @-webkit-keyframes preloader_2_1 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(-20px) translateY(-10px) rotate(-180deg);
+			  transform: translateX(-20px) translateY(-10px) rotate(-180deg);
+	  border-radius: 50%;
+	  background: #3498db;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+  }
+  
+  @keyframes preloader_2_1 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(-20px) translateY(-10px) rotate(-180deg);
+			  transform: translateX(-20px) translateY(-10px) rotate(-180deg);
+	  border-radius: 50%;
+	  background: #3498db;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+  }
+  @-webkit-keyframes preloader_2_2 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(20px) translateY(-10px) rotate(180deg);
+			  transform: translateX(20px) translateY(-10px) rotate(180deg);
+	  border-radius: 50%;
+	  background: #f1c40f;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+  }
+  @keyframes preloader_2_2 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(20px) translateY(-10px) rotate(180deg);
+			  transform: translateX(20px) translateY(-10px) rotate(180deg);
+	  border-radius: 50%;
+	  background: #f1c40f;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+  }
+  @-webkit-keyframes preloader_2_3 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(-20px) translateY(10px) rotate(-180deg);
+			  transform: translateX(-20px) translateY(10px) rotate(-180deg);
+	  border-radius: 50%;
+	  background: #2ecc71;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+  }
+  @keyframes preloader_2_3 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(-20px) translateY(10px) rotate(-180deg);
+			  transform: translateX(-20px) translateY(10px) rotate(-180deg);
+	  border-radius: 50%;
+	  background: #2ecc71;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(-360deg);
+			  transform: translateX(0px) translateY(0px) rotate(-360deg);
+	  border-radius: 0px;
+	}
+  }
+  @-webkit-keyframes preloader_2_4 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(20px) translateY(10px) rotate(180deg);
+			  transform: translateX(20px) translateY(10px) rotate(180deg);
+	  border-radius: 50%;
+	  background: #e74c3c;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+  }
+  @keyframes preloader_2_4 {
+	0% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(0deg);
+			  transform: translateX(0px) translateY(0px) rotate(0deg);
+	  border-radius: 0px;
+	}
+	50% {
+	  -webkit-transform: translateX(20px) translateY(10px) rotate(180deg);
+			  transform: translateX(20px) translateY(10px) rotate(180deg);
+	  border-radius: 50%;
+	  background: #e74c3c;
+	}
+	80% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+	100% {
+	  -webkit-transform: translateX(0px) translateY(0px) rotate(360deg);
+			  transform: translateX(0px) translateY(0px) rotate(360deg);
+	  border-radius: 0px;
+	}
+  }
+  
 
 #pichold{position:absolute; top:5%; left:2%; height:95%; width:96%; background:rgba(0,0,0,.01); box-shadow:0px .8px 18px 2px rgba(0,0,0,.1); border-radius:0px 30px 0px 0px; display:block;}
 #pichold>img{position:absolute; top:5%; left:5%; height:85%; width:45%;}
@@ -245,42 +503,29 @@ main{display:none;}
 	main{display:none;}
 	
 	
-	#preload-page{width:100%; height:100%; display:block; background: #16011e; align-items: center; justify-content: center; z-index:9999;}
-		 #preload-page h1{position: absolute; top:45%; left:65%; font-size: 8px; font-weight: lighter; color: white; font-family: Segoe Print; letter-spacing: 2px; display: none;}
-		 #preload-img{position:absolute; width:350px; height:100px; display:block; top:30%; }
-		 
-		 #preloader{ width:20px; height:20px; top:60%;  display:inline-block; padding: 0px; text-align: left; background: transparent;}
-		 #preloader span{vertical-align: top; border-radius: 100%; background:  rgba(12, 246, 232, 0.99); display:inline-block; width: 8px; height: 8px; margin-top: -20px; 
-			-webkit-animation: preloader 0.8s ease-in-out infinite alternate; animation: preloader 0.8s ease-in-out infinite alternate; transform-origin: center 20px; -webkit-transform-origin: center 20px;
-		}
-		 
+	#preload-page{width:100%; height:100%; display:block; background: #110117; align-items: center; justify-content: center; z-index:9999;}
+	#logo{position: absolute; width:150px; height:150px; left:50%; top: 50%; transform: translate(-50%, -50%);}
+	#preloader-text-mobile{position: absolute; top: 51%; left:-100%; transform: translate(-50%, -50%); font-size: 7px; font-weight: lighter; font-family: sans-serif; color: white; letter-spacing:2px; display:block;}
+	#preloader-text-desktop{display: none;}
 
-		 @keyframes preloader{
-		 from{transform:rotate(120deg);}
-		 to{transform:rotate(240deg);}
-		}
-
-
-		@-webkit-keyframes preloader{
-			from{-webkit-transform:rotate(120deg);}
-			to{-webkit-transform:rotate(240deg);}
-		  }
+   .preloader16{width:25px; left:47%; top:88%;}
+   .preloader16 span{width:8px; height:8px ;}
 		
 	 
    
-    #art1 {position:absolute; top:10%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
+    #art1 {position:absolute; top:10%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
 	#art1 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art2 {position:absolute; top:105%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
+	#art2 {position:absolute; top:105%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
 	#art2 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art3 {position:absolute; top:200%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
+	#art3 {position:absolute; top:200%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
 	#art3 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art4 {position:absolute; top:295%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
+	#art4 {position:absolute; top:295%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
 	#art4 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art5 {position:absolute; top:390%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
+	#art5 {position:absolute; top:390%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
 	#art5 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
 
@@ -345,29 +590,28 @@ main{display:none;}
 	#close-trigger{position:absolute;  top:2%; right:5%; color: #110117; display:none;}
 		
 		 
-	#offslide{background: white; box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25); position:fixed; width:100%; top:0%; height:100%; left:-100%; opacity:1; border-radius:0px 0px 0px 0px; display:block; z-index:999;}
-	#offslide-down-1{position:fixed;  height:15%; background:#110117; bottom:-108%; width:0%; right:0%; border-radius:600px 30px 30px 0px; opacity:1; }
+	#offslide{background: white; position:fixed; width:100%; top:0%; height:100%; left:-100%; opacity:1; border-radius:0px 0px 0px 0px; display:block; z-index:999;}
+	#offslide-down-1{position:fixed;  height:20%; background:#110117; bottom:-108%; width:0%; right:0%; border-radius:600px 30px 30px 0px; opacity:1; }
 	#darkmode{position:absolute; top:32%; left:75%; color:black; width:0%; height:0%; }
 	
-	
 	#toplink{position:fixed; width:100%; height:100%; margin-left:6vw; margin-top:-5vw;  box-sizing: border-box;}
-		
-		 #home{position:absolute;  left: 104px; top: 106px; font-family: Segoe Print; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; align-items: center; text-align: center; letter-spacing: 0.1em; opacity:1; color: #110117; text-decoration:none;}
-		 #painting{position: absolute;  left: 104px; top: 170px; font-family: Segoe Print; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color:  #110117; text-decoration:none;}
-				#down{position:absolute;  height:0%; width:100%; top:43%; left:1.8%; background:white;}
-				#mob-year{position:absolute; top:10.5%; left:40%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:10px; opacity:.3;}
-				#mob-series{position:absolute; top:65%; left:40%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:10px; opacity:.3;}
-				#works-span{position:absolute; top:39.6%; right:64%;  color:#00695c; font-size:8px; font-weight:bold; display:none; }
-				#works-span2{position:absolute; top:39.6%; right:64%; color:#00695c; font-size:8px; font-weight:bold; display:none;}
-		 #exhibition{position: absolute;  left: 96px; top: 235px; font-family: Segoe Print; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color:  #110117; text-decoration:none;}
-		 #profile{position: absolute; left: 96px; top: 302px; font-family: Segoe Print; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color: #110117; text-decoration:none;}
-		 #contact{position: absolute; left: 96px; top: 369px;font-family: Segoe Print; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color:  #110117; text-decoration:none;}
-		 #home:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
-		 #painting:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
-		 #exhibition:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
-		 #profile:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
-		 #contact:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
-	
+   
+	#home{position:absolute;  left: 96px; top: 90px; font-family:sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; align-items: center; text-align: center; letter-spacing: 0.1em; opacity:1; color: #110117; text-decoration:none;}
+	#painting{position: absolute;  left: 96px; top: 140px; font-family:sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color:  #110117; text-decoration:none;}
+		   #down{position:absolute;  height:0%; width:100%; top:43%; left:1.8%; background:white;}
+		   #mob-year{position:absolute; top:10.5%; left:40%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:10px; opacity:.3;}
+		   #mob-series{position:absolute; top:65%; left:40%; display:none; color:black; text-decoration:none; font-weight:bold; letter-spacing:3px; font-size:10px; opacity:.3;}
+		   #works-span{position:absolute; top:39.6%; right:64%;  color:#00695c; font-size:8px; font-weight:bold; display:none; }
+		   #works-span2{position:absolute; top:39.6%; right:64%; color:#00695c; font-size:8px; font-weight:bold; display:none;}
+	#exhibition{position: absolute;  left: 96px; top: 190px; font-family:sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color: #110117; text-decoration:none;}
+	#profile{position: absolute; left: 96px; top: 240px; font-family:sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color: #110117; text-decoration:none;}
+	#contact{position: absolute; left: 96px; top: 290px;font-family:sans-serif; font-style: normal; font-weight: normal; font-size: 18px; line-height: 32px; text-align: center; letter-spacing: 0.1em; opacity:1; color: #110117; text-decoration:none;}
+	#home:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
+	#painting:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
+	#exhibition:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
+	#profile:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
+	#contact:hover{letter-spacing:0.2em; font-size:20px; opacity: 1;}
+
 }
 
 
