--- a/css/styles.css
+++ b/css/styles.css
@@ -503,7 +503,7 @@ main{display:none;}
 	main{display:none;}
 	
 	
-	#preload-page{width:100%; height:100%; display:block; background: #110117; align-items: center; justify-content: center; z-index:9999;}
+	#preload-page{width:100%; height:100%; display:none; background: #110117; align-items: center; justify-content: center; z-index:9999;}
 	#logo{position: absolute; width:150px; height:150px; left:50%; top: 50%; transform: translate(-50%, -50%);}
 	#preloader-text-mobile{position: absolute; top: 51%; left:-100%; transform: translate(-50%, -50%); font-size: 7px; font-weight: lighter; font-family: sans-serif; color: white; letter-spacing:2px; display:block;}
 	#preloader-text-desktop{display: none;}
@@ -513,19 +513,19 @@ main{display:none;}
 		
 	 
    
-    #art1 {position:absolute; top:10%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
+    #art1 {position:absolute; top:10%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
 	#art1 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art2 {position:absolute; top:105%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
+	#art2 {position:absolute; top:105%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
 	#art2 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art3 {position:absolute; top:200%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
+	#art3 {position:absolute; top:200%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
 	#art3 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art4 {position:absolute; top:295%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
+	#art4 {position:absolute; top:295%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
 	#art4 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
-	#art5 {position:absolute; top:390%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.4); border-radius: 0px;}
+	#art5 {position:absolute; top:390%; height:85%; width:90%; left:5%; background: white; box-shadow: inset 2px 0px 0px rgba(12, 246, 232, 0.2); border-radius: 0px;}
 	#art5 img{position:absolute; width:95%; left:5%; height:100%; top:0%;}
 
 
@@ -537,12 +537,16 @@ main{display:none;}
 
 
 
-	   #artworks-house h3{display: none;}
+	   #artworks-house h3{display: none; position: absolute; top:50%; left:50%; transform: translate(-50%, -50%); color: white; font-size: 24px;}
 	   #artworks-house h4{display: none;}
-	   #artworks-house #download{display: none;}
-	   #artworks-house #cart{display: none;}
+	   #artworks-house #download{display: none; position:absolute; right:3%; bottom:5%; }
 	   
-
+	   #artworks-house #cart{display: none; position:absolute; right:13%; bottom:5%;}
+	   #artworks-house #cart1{display: none; position:absolute; right:13%; bottom:5%;}
+	   #artworks-house #cart2{display: none; position:absolute; right:13%; bottom:5%;}
+	   #artworks-house #cart3{display: none; position:absolute; right:13%; bottom:5%;}
+	   #artworks-house #cart4{display: none; position:absolute; right:13%; bottom:5%;}
+	   
 	
 	
 	#pichold1>img{width:84%; left:8%; height:70%; top:8%;}
@@ -584,8 +588,9 @@ main{display:none;}
 	#artworks-house{position:absolute;  width:100%; height:100%; left:0%; background:white; z-index:999;}
 	
 	
-
-	#menu-btn{position: fixed; width: 107px; height: 23px; right: -8%; top: 1%; font-family: Segoe Print; font-style: normal; font-weight: bold; font-size: 13px; line-height: 23px; text-align: center; letter-spacing: 0.1em; color: #FFFDFD; text-decoration:none;} 
+	.navbar-house{position: fixed; width:22%; height:5%; background: #110117; right: 0%; top:0%; border-radius: 50px 10px 10px 50px; box-shadow: 100px 100px 1800px rgba(12, 246, 232, .8);  z-index: 99;}
+	#menu-btn{position: absolute; width: 107px; height: 23px; right: -55%; top: -3%; font-family: Segoe Print; font-style: normal; font-weight: bold; font-size: 13px; line-height: 23px; text-align: center; letter-spacing: 0.1em; color: #110117; text-decoration:none; z-index: 999;} 
+	#menu-name{position: relative; left:-18%; top:0%; font-family: Calibri; font-style: italic; font-weight: bold; font-size: 7px; line-height: 24px; text-align: center; letter-spacing: 0.25em; color: #0CF6E8;}
 	
 	#close-trigger{position:absolute;  top:2%; right:5%; color: #110117; display:none;}
 		
@@ -618,6 +623,9 @@ main{display:none;}
 
 @media screen and  (min-width: 280px) and (max-width: 319px) and (orientation: portrait){
 	#toplink{margin-top:5vw; margin-left:2vw;}
+	.navbar-house{width:27%;}
+	#menu-btn{right:-55%; top:5%;}
+	#menu-name{left:-15%; top:10%; font-size:9px;}
 }
 
 
@@ -625,6 +633,8 @@ main{display:none;}
 /* iphones -------*/
 @media screen and  (min-width: 360px) and (orientation: portrait){
 	#toplink{margin-top:5vw; margin-left:13vw;}
+	#menu-btn{right:-50%; top:5%;}
+	#menu-name{left:-19%; top:10%; font-size:9px;}
 }
 
 @media screen and  (min-width: 410px) and (orientation: portrait){
